Header template created

--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 	<script src="./js/main.js"></script>
 </head>
 <body>
-	<span style="font-family:'PFBeauSansProBold';">PFBeauSansProBold</span><br>
-	<span style="font-family:'PFBeauSansProReg';">PFBeauSansProReg</span><br>
-	<span style="font-family:'PFBeauSansProLight';">PFBeauSansProLight</span><br>
-	<span style="font-family:'PFBeauSansProSeBold';">PFBeauSansProSeBold</span>
+	<div id="wrapper">
+		<div id="page">
+			<header>
+				<div id="logo">
+					<a href="[[~1]]"><img src="" alt=""></a>
+				</div>
+				<div id="search-block">
+					<form action="">
+					<input type="text">
+					<input type="submit">
+					</form>
+				</div>
+				<div id="contact-block">
+					<p><span></span></p>
+					<p><span></span></p>
+				</div>
+				<div id="geo">
+					<p></p>
+					<a href=""></a>
+				</div>
+			</header>
+		</div>
+		<div id="sidebar">
+			
+		</div>
+	</div>
 </body>
 </html>
