--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Поставка отделочных, фасадных материалов, мебели, света и интерьеров.</title>
+	<meta name="keywords" content="">
+	<meta name="description" content="">
 	<link rel="stylesheet" href="./style/reset.css">
-	<link rel="stylesheet" href="./style/fonts.css">	
 	<link rel="stylesheet" href="./style/main.css">	
 	<script src="./js/jquery-1.11.3.js"></script>
 	<script src="./js/main.js"></script>
@@ -14,21 +15,27 @@
 		<div id="page">
 			<header>
 				<div id="logo">
-					<a href="[[~1]]"><img src="" alt=""></a>
-				</div>
-				<div id="search-block">
-					<form action="">
-					<input type="text">
-					<input type="submit">
+					<a href="[[~1]]"><img src="./img/logo.png" alt=""></a>
+				</div><!--
+				--><div id="search-block">
+					<form action="" method="post">
+					<p class="search">
+						<input type="search" placeholder="Поиск по ключевым словам">
+						<input type="submit" value="">
+					<p>
 					</form>
-				</div>
-				<div id="contact-block">
-					<p><span></span></p>
-					<p><span></span></p>
-				</div>
-				<div id="geo">
-					<p></p>
-					<a href=""></a>
+				</div><!--
+				--><div id="geo">
+					<div id="contact-block">
+						<p class="bold c2f4c61">Адрес ШОУ-РУМА: </p>
+						<p>г. Владивосток, ул. Светланская, 55, офис 5,</p>
+						<p class="bold c2f4c61">Телефон для записи:</p>
+						<p>(423) 244-65-66</p>
+					</div>
+					<div id="town">
+						<p>Ваш город:</p>
+						<a href="" class="bold italic dashed">Владивосток</a>
+					</div>
 				</div>
 			</header>
 		</div>
