--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<p class="search">
 						<input type="search" placeholder="Поиск по ключевым словам">
 						<input type="submit" value="">
-					<p>
+					</p>
 					</form>
 				</div><!--
 				--><div id="geo">
@@ -38,6 +38,15 @@
 					</div>
 				</div>
 			</header>
+			<nav>
+				<ul>
+					<li><a href="#">Отделочные материалы</a></li><!--
+					--><li><a href="#">Сантехника</a></li><!--
+					--><li><a href="#">Свет</a></li><!--
+					--><li><a href="#">Мебель</a></li><!--
+					--><li><a href="#">Интерьеры</a></li>
+				</ul>
+			</nav>
 		</div>
 		<div id="sidebar">
 			
